# WorldSeriesWinners

./: CMakeLists.txt  README.md
source/: WorldSeriesWinners.cpp  ch7_pc16_world_series_winners.csv  file_read.cpp  file_read.h
